[package]
name = "test-scaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = "*"
gstreamer = { version = "*", features = ["dox"] }
gstreamer-app = "*"
gstreamer-video = "*"
byte-slice-cast = "*"
image = "*"
fast_image_resize = "*"
anyhow = "*"
derive_more = "*"
tokio = { version = "*", features = ["full"] }
smol = "*"
futures-lite = "*"